# athena

./: .gitignore  .session13-pr-path-proof.txt  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GUIDE.md  VISION.md
.beads/: issues.jsonl  metadata.json
.claude/handoffs/: .handoff_index.json  handoff_001_2026-02-20_merge-7-trace-semantics-branches.md  handoff_002_2026-02-20_synthesis-phase-trace-semantics.md  handoff_003_2026-02-20_step-3b-requirements-refinement.md  handoff_004_2026-02-20_plan-implement-5a-candidate-ir-schemas.md  handoff_005_2026-02-21_codex-prompt-5b-lel-prototype.md  handoff_006_2026-02-21_close-step-5a-open-threads.md  (+22 more)
decisions/: 001-python-rust-core.md  002-aggregate-score-contract.md
research/trace-semantics/prototypes/lel-ir-prototype/: Cargo.toml
research/trace-semantics/prototypes/lel-ir-prototype/src/: adapter.rs  bench.rs  common.rs  convergence.rs  event_kinds.rs  gromacs_adapter.rs  lel.rs  lib.rs  overlay.rs  vasp_adapter.rs
research/trace-semantics/prototypes/lel-ir-prototype/src/tests/: mod.rs
research/trace-semantics/prototypes/lel-ir-prototype/testdata/openmm_state_datareporter/: openmm84_bom.csv  openmm84_crlf.csv  openmm84_default_kj.csv  openmm84_minimal_step_potential.csv  openmm84_progress_volume_density_speed.csv
research/trace-semantics/prototypes/lel-ir-prototype/testdata/vasp/: converged_relaxation.vasp  mixed_scf_dav_rmm.vasp  nonconverged_scf.vasp  oscillating_scf.vasp  t1_honeycomb_pt52.vasp  t1_large_approx.vasp  t1_nomad_nonconv_oscillating.vasp  t1_nomad_nonconv_stalled.vasp  t1_sigma_pt56_substrate.vasp
(+87 files in other folders)
