[package]
name = "lel-ir-prototype"
version = "0.1.0"
edition = "2021"
publish = false
description = "ATHENA Trace Semantics Engine — LEL IR prototype (Step 5b research artifact)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bench"
path = "src/bench.rs"
